@@ -1252,6 +1252,8 @@ If a non-empty file ends with a line without a lineend character sequence
 then one will be supplied. `result-string` will either be empty
 or end with `#\Newline`.
 
+`charset` defaults to UTF-8.
+
 
 ### (write-textfile-lines filenamestr string-sequence  [appendp [charset]]) -> nil
 
@@ -1261,6 +1263,8 @@ Write all elements (which must be of type `string`)
 of `string-sequence` to the file `filenamestr`.
 Each element (line) will be terminated with the OS-default line-end character(-sequence).
 (Note: with the JVM this can be set using -Dline.separator.)
+
+`charset` defaults to UTF-8.
 
 
 ### (write-textfile filenamestr string  [appendp [charset]]) -> nil
