@@ -6,6 +6,8 @@ Changes in JMurmel-1.4.4 relative to JMurmel-1.4.3
  * changed *command-line-argument-list* in compiled Murmel to a regular mutable list
  * changed load and require in comiled Murmel: must appear at toplevel
  * changed car to accept all strings
+ * changed read-textfile and read-textfile-lines to use UTF-8 as the default charset
+   (unless given as an argument)
 
  * fixed read-from-string: handle feature-expressions correctly, intern symbols correctly
  * fixed compiled random-state-p and make-random-state
